--- a/app/views/pages/pour.html.erb
+++ b/app/views/pages/pour.html.erb
@@ -10,22 +10,22 @@
 
   <%= form_tag("/pour", method: "post", :honeypot => true ) do %>
     <div><%= label_tag(:numbeer_id, "NumBeer-ID :") %></div>
-  <div><%= text_field_tag(:numbeer_id) %></div>
+  <div><%= text_field_tag :numbeer_id, nil, :class => 'numBeerField' %></div>
     <div id="keypad" class="keypad vertical-align:top;">
-      <input type="button" class="keypad-btn btn btn-default btn-lg" value="7"/>
-      <input type="button" class="keypad-btn btn btn-default btn-large" value="8"/>
-      <input type="button" class="keypad-btn btn btn-default btn-large" value="9"/><br/>
-      <input type="button" class="keypad-btn btn btn-default btn-large" value="4"/>
-      <input type="button" class="keypad-btn btn btn-default btn-large" value="5"/>
-      <input type="button" class="keypad-btn btn btn-default btn-large" value="6"/><br/>
-      <input type="button" class="keypad-btn btn btn-default btn-large" value="1"/>
-      <input type="button" class="keypad-btn btn btn-default btn-large" value="2"/>
-      <input type="button" class="keypad-btn btn btn-default btn-large" value="3"/><br/>
-      <input type="button" class="keypad-btn btn btn-default btn-large" value="DEL"/>
-      <input type="button" class="keypad-btn btn btn-default btn-large" value="0"/>
-      <input type="button" class="keypad-btn btn btn-default btn-large" value="CLR"/>
+      <input type="button" class="keypad-btn btn btn-default btn-xl" value="7"/>
+      <input type="button" class="keypad-btn btn btn-default btn-xl" value="8"/>
+      <input type="button" class="keypad-btn btn btn-default btn-xl" value="9"/><br/>
+      <input type="button" class="keypad-btn btn btn-default btn-xl" value="4"/>
+      <input type="button" class="keypad-btn btn btn-default btn-xl" value="5"/>
+      <input type="button" class="keypad-btn btn btn-default btn-xl" value="6"/><br/>
+      <input type="button" class="keypad-btn btn btn-default btn-xl" value="1"/>
+      <input type="button" class="keypad-btn btn btn-default btn-xl" value="2"/>
+      <input type="button" class="keypad-btn btn btn-default btn-xl" value="3"/><br/>
+      <input type="button" class="keypad-btn btn btn-default btn-xl" value="DEL"/>
+      <input type="button" class="keypad-btn btn btn-default btn-xl" value="0"/>
+      <input type="button" class="keypad-btn btn btn-default btn-xl" value="CLR"/>
     </div>
-    <div><%= submit_tag "Pour", :class => "btn btn-primary btn-large" %></div>
+    <div><%= submit_tag "Pour", :class => "btn btn-primary btn-xl" %></div>
   <% end %>
 <% else %>
   <h2> No Keg On Tap, Check back later! </h2>  
@@ -34,10 +34,16 @@
   
 <script type="text/javascript" charset="utf-8">
   
+  jQuery(document).ready(function () {
+    //hide the .msg div after 3 seconds
+    setTimeout(function(){ jQuery(".msg").hide(); }, 3500);
+  });
+
+  
   $(".keypad-btn").click(function(){
     num($(this));
-    $(".msg").val("");
   });
+ 
   
   function num(b){
     btn_val = b.val()
