--- a/app/assets/stylesheets/pages.stats.css.scss
+++ b/app/assets/stylesheets/pages.stats.css.scss
@@ -9,10 +9,13 @@
   }
   .stat_val{
     background: #EEEEEE;
-    font-size: 14px;
+    font-size: 30px;
     padding: 20px 0px;
     border-radius: 0 0 10px 10px;
+    line-height: 1;
+    min-height: 60px;
   }
+  
   margin-top: 10px;
   margin-bottom: 10px;
   
